fixed footer and header alignment

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
 body {
     background-color: whitesmoke;
     text-align: center;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    width: 100%;
 }
 .head-container {
     display: flex;
@@ -13,12 +18,6 @@ body {
     justify-content: space-between;
     width: 500px;
 }
-
-
-
-
-
-
 .content-container {
     display: flex;
     justify-content: space-around;
@@ -34,4 +33,12 @@ body {
     min-width: 500px;
     min-height: 500px;
     border: solid black 2px;
+}
+footer {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 0;
+    margin-top: 130px;
 }
